--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "resetDB": "ts-node-dev src/resetDB.ts"
+    "resetDB": "ts-node-dev src/resetDB.ts",
+    "dev": "ts-node-dev --poll src/index.ts"
   },
   "author": "",
   "license": "ISC",
