--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml --watch"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "5.2.2",
-    "next": "14.0.3"
+    "@apollo/client": "^3.8.6",
+    "@heroicons/react": "^2.0.18",
+    "@types/node": "20.6.2",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "axios": "^1.5.1",
+    "codegen": "^0.1.0",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "graphql": "^16.8.1",
+    "next": "13.4.19",
+    "query-string": "^8.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "@graphql-codegen/cli": "3.2.2",
+    "@graphql-codegen/introspection": "3.0.1",
+    "@graphql-codegen/typescript": "3.0.2",
+    "@graphql-codegen/typescript-operations": "3.0.2",
+    "@graphql-codegen/typescript-react-apollo": "3.3.7",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^3.8.1",
+    "postcss": "^8.4.30",
+    "tailwindcss": "^3.3.3"
   }
 }
